scroll to top button

--- a/src/index.css
+++ b/src/index.css
@@ -1632,3 +1632,31 @@ border: 2px solid var(--buttons-color);
   color:#000;
 }
 /* end of  contact us page */
+
+/* scroll button  */
+.scrollBtn{
+  position:fixed;
+  bottom:2%;
+  right:1%;
+  padding:10px;
+  border:none;
+  background-color:var(--buttons-color);
+  font-weight: 600;
+  cursor:pointer;
+  font-size:20px;
+  border-radius:8px;
+  z-index:5;
+  opacity:1;
+  transition:all .1s ease-in;
+  border:1px solid #000;
+}
+.scrollBtn:hover{
+  background-color:var(--main-color);
+  border:2px solid black;
+}
+.invisible{
+  opacity:0;
+  z-index:-10;
+;
+}
+/* end of scroll button  */
