--- a/src/index.css
+++ b/src/index.css
@@ -887,7 +887,7 @@ hr{
   justify-content:center;
   
 }
-.form-group label{
+.form-group-filter label{
   font-family:var(--main-font);
   margin-right:10px;
   font-weight: 600;
